# APIChatBot

./: .dockerignore  .gitignore  DOCKER_SETUP.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  docker.env.template  env.template  init-db.sql  main.py  prometheus.yml  pyproject.toml  requirements.txt  verify_setup.py
migrations/: env.py
migrations/versions/: 09072329e327_add_documents_table_and_update_chunk_.py  13c0fab6eb9b_initial_database_schema.py  1be28b31ddf6_clean_migration.py  a1b2c3d4e5f6_add_email_change_fields.py  e8a02ff92ec2_add_modality_id_to_categories_and_make_.py  ed67d9223762_initial_clean_schema.py
scripts/: init_default_user.py
src/app/: __init__.py  config.py  main.py
src/app/controllers/: __init__.py  auth.py  category.py  chatbot_config.py  document.py  job_pending_questions.py  modality.py  profile.py  question.py  report.py  submodality.py
src/app/db/: __init__.py  database.py  init_db.py  session.py
src/app/dependencies/: auth.py
src/app/middlewares/: __init__.py  auth_middleware.py  logging_middleware.py
src/app/models/: __init__.py  category.py  chatbot_config.py  chunk_embedding.py  document.py  modality.py  question.py  submodality.py  user.py
src/app/schemas/: __init__.py  category.py  chatbot_config.py  document.py  embedding.py  error.py  modality.py  question.py  submodality.py  user.py
src/app/services/: email_service.py  embedding_service.py  gemini_service.py  graph_service.py  pdf_service.py  profile_service.py  prometheus_service.py  report_service.py  storage_service.py  user_service.py
src/app/templates/email/: email_change_confirmation.html  email_change_success.html  email_change_verification.html  password_reset.html  welcome_email.html
src/app/utils/: error_handlers.py  hashing.py  html_templates.py  jwt_utils.py  metrics.py  questions_utils.py  string_utils.py
src/app/workers/: __init__.py
