[tool.poetry]
name = "api-chatbot-ufps"
version = "0.1.0"
description = "FastAPI ChatBot API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.104.0"
uvicorn = { extras = ["standard"], version = ">=0.24.0" }
sqlalchemy = ">=2.0.0"
alembic = ">=1.12.0"
python-dotenv = ">=1.0.0"
python-jose = { extras = ["cryptography"], version = ">=3.3.0" }
passlib = ">=1.7.4"
python-multipart = ">=0.0.6"
pydantic = { extras = ["email"], version = ">=2.11.7,<3.0.0" }
# Base de datos PostgreSQL
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
# Soporte para vectores
pgvector = "^0.2.4"
# Mantener SQLite para desarrollo local (opcional)
aiosqlite = "^0.19.0"
# Otras dependencias
bcrypt = "^4.0.1"
minio = "^7.2.0"
aiosmtplib = "^4.0.2"
jinja2 = "^3.1.6"
aiohttp = "^3.12.15"
# Para trabajar con embeddings
numpy = "^1.26.0"
pydantic-settings = "^2.10.1"
greenlet = "^3.2.4"
sentence-transformers = "^5.1.0"
google-generativeai = "^0.8.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"