[tool.poetry]
name = "api-chatbot-ufps"
version = "0.1.0"
description = "FastAPI ChatBot API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.104.0"
uvicorn = { extras = ["standard"], version = ">=0.24.0" }
sqlalchemy = ">=2.0.0"
alembic = ">=1.12.0"
python-dotenv = ">=1.0.0"
python-jose = { extras = ["cryptography"], version = ">=3.3.0" }
passlib = ">=1.7.4"
python-multipart = ">=0.0.6"
pydantic = { extras = ["email"], version = ">=2.11.7,<3.0.0" }
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.4"
aiosqlite = "^0.19.0"
bcrypt = "^4.0.1"
minio = "^7.2.0"
aiosmtplib = "^4.0.2"
jinja2 = "^3.1.6"
aiohttp = "^3.12.15"
numpy = "^1.26.0"
pydantic-settings = "^2.10.1"
greenlet = "^3.2.4"
sentence-transformers = "^5.1.0"
google-genai = "1.41.0"
torch = { version = "2.2.2+cpu", source = "pytorch-cpu" }
prometheus-client = "^0.21.0"
matplotlib = "3.9.2"
seaborn = "0.13.2"
reportlab = "4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"